[package]
name = "short"
version = "1.0.0"
edition = "2021"
default-run = "short"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
redis = "0.25.2"
url = "2.5.0"

[[bin]]
name = "short-cli"
path = "src/bin/cli.rs"


